# mathgl-figure

./: .gitignore  CMakeLists.txt  INSTALL  README.md
Documentation/: doc.tex
Documentation/examples_from_doc/: opening-example.cpp
Documentation/examples_from_doc/grid/: grid.cpp  grid_1.eps  grid_2.eps  main
Examples/1-LogScaling/: main.cpp
Examples/2-CodingEffortComparison/: main.cpp
Examples/6-AutoLineStyles/: CMakeLists.txt
Examples/7-Bar/: bar.cpp
Install/: CMakeLists.txt
Modules/: FindFigure.cmake
doc/: doc.out  doc.tex  doc.toc
doc/examples_from_doc/fplot/: fplot.cpp
doc/examples_from_doc/grid/: grid_1.eps
doc/examples_from_doc/legend/: legend.cpp  legend_1.eps  legend_2.eps  main
examples/1/: Makefile  main  main.cpp  plot.eps
examples/1-LogScaling/: CMakeLists.txt
examples/2/: main.cpp  plot-1.eps  plot-2.eps
examples/3/: 3d.eps  main.cpp
examples/4/: 4.eps  main  main.cpp
examples/4-NonPosLogData/: CMakeLists.txt
examples/5-CMake/: CMakeLists.txt  main.cpp
examples/6/: CMakeLists.txt  multiple.cpp
install/: CMakeLists.txt  INSTALL
modules/: FindFigure.cmake
old_versions/v0/: figurev1.cpp  figurev1.hpp
old_versions/v1/: figure.cpp
old_versions/v1/doc/: doc.out
old_versions/v1/examples/: plot-1.eps  plot-12.eps  plot-2.eps
old_versions/v1/install/: CMakeLists.txt
old_versions/v1/test/: plot.eps
old_versions/v2/: figure.cpp  figure.hpp  test.cpp  test.eps  test2.cpp
old_versions/v2/examples/1/: debug.cpp  fplot.eps  main.cpp
old_versions/v2/examples/2/: main.cpp
old_versions/v2/examples/3/: main.cpp
old_versions/v2/modules_v2/: FindFigure.cmake
old_versions/v2/pointer_version/: figure.cpp  figure.hpp
old_versions/v2/test/: 2d  2d-1.cpp  2d-2.cpp  2d-3.cpp  2d.cpp  CMakeLists.txt  P2d-2.eps  P2d-3.eps  checkfile.hpp
src/: Figure  MglPlot.hpp  MglStyle.hpp  figure.cpp  figure.hpp
src/doc/: doc.tex
v0/: CMakeLists.txt  main.cpp
v1/: .figurev2.hpp.swp  CMakeLists.txt  a.out  figure.cpp  figure.hpp  main.cpp  plot.eps
v1/doc/: doc.tex  doc.toc
v1/examples/: main.cpp  plot.eps
v1/test/: t.cpp
v2/: Figure  MglPlot.hpp  figure.cpp  figure.hpp
v2/doc/: doc.out  doc.tex  doc.toc
v2/examples/: doc.cpp  main.cpp  plot-1.eps  plot-2.eps
v2/examples/1/: main.cpp  plot.eps
v2/install/: CMakeLists.txt
